# zk-elgamal

./: Cargo.toml  rust-toolchain.toml
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
